[gd_scene load_steps=4 format=3 uid="uid://c87kqtoh3l4fp"]

[ext_resource type="Script" path="res://Objects/laser.gd" id="1_73emd"]
[ext_resource type="Texture2D" uid="uid://cune7asa62jp1" path="res://resources/graphics/projectiles/blue.png" id="1_q2gkr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_07a3e"]
radius = 6.0
height = 72.0

[node name="laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_73emd")

[node name="Blue" type="Sprite2D" parent="."]
position = Vector2(-1, 36)
texture = ExtResource("1_q2gkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_07a3e")

[node name="laserLife" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="laserLife" to="." method="_on_laser_life_timeout"]
